[project]
name = "instabot"
version = "1.0.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chatterbot>=1.2.13",
    "chatterbot-corpus>=1.3.3",
    "en-core-web-sm",
    "pyyaml>=6.0.3",
    "selenium>=4.41.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.7",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
